# deterministic-finite-state-machine

./: .flake8  .pre-commit-config.yaml  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
src/dfsm/: py.typed
src/dfsm/core/: fsm.py
src/dfsm/models/: fsm_model.py
tests/: test_fsm_advanced.py  test_fsm_basic.py
